--- a/carros-top/public/index.html
+++ b/carros-top/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Projeto Carros Top"
+      content="Projeto Carros Top Dev"
     />
     <title>Carros Top</title>
   </head>
